document structure lab

--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Site Title</title>
+    <title>Intro to Js</title>
+    </title>
  </head>
  <body>
-    website
+    <h2>Runing Javascipt Code</h2>
+
+
+    <script>
+      console.log("Hello class!!")
+
+      console.log(4+4)
+      
+      alert("the session is insightful")
+  
+    </script>
  </body>
  </html>
