--- a/index.html
+++ b/index.html
@@ -1,23 +1,8 @@
 <!DOCTYPE html>
- <html lang="en">
- <head><link rel="stylesheet" type="text/css" href="style.css" />
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Intro to Js</title>
-    </title>
- </head>
- <body>
-    <h2>Runing Javascipt Code</h2>
-
-
-    <script>
-      console.log("Hello class!!")
-
-      console.log(4+4)
-      
-      alert("the session is insightful")
-  
-    </script>
- </body>
- </html>
+<html lang="en">
+<head>
+    <title>My Site Title</title>
+    <link rel="stylesheet" type="text/css" href="style.css" > </head>
+<body> </body>
+</html>
